<resources>
    <string name="app_name">Demo My LoginApp</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="log_in">LOG IN</string>
    <string name="cancel">CANCEL</string>
    <string name="reistration_form">Reistration Form</string>
    <string name="welcome_to_adventure_learning_club">Welcome to Adventure Learning CLub!</string>
    <string name="full_name">Full Name:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register">Register</string>
    <string name="button">Button</string>
    <string name="textview">TextView</string>
    <string name="phone">Phone:</string>
    <string name="e_mail">E-mail:</string>
    <string name="school">School:</string>
    <string name="student_id">Student ID:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender:</string>
</resources>